# Chip8-Emulator

./: CMakeLists.txt  README.md  main.cpp
src/: cpu.cpp  cpu.h  emulator.cpp  emulator.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/resource/: emu.frag  emu.vert
